fixed issue of too much horizontal scroll
page would scroll beyond elements of page

--- a/assets/style.css
+++ b/assets/style.css
@@ -611,7 +611,7 @@ form input[type=email], textarea{
 
 footer{
 	margin-top: 100px;
-	padding: 50px;
+	padding: 50px 0;
 	display: grid;
 	grid-template-columns: 1fr 4fr 4fr;
 	grid-template-rows: auto;
@@ -682,6 +682,7 @@ img{
 	justify-items: center;
 	align-items: center;
 	height: 100%;
+	max-height: 600px;
 	background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('hero.jpg');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
